--- a/f1Racer/index.html
+++ b/f1Racer/index.html
@@ -23,6 +23,7 @@
                 </div>
                                   
                 <button class="btn btn-primary" type="submit" id="result7">Show 7 Results</button>
+                <button class="btn btn-primary btn-danger" id="resultall">Show All</button>
                 
             </form>
         </div>
