fixes on error catching

--- a/f1Racer/index.html
+++ b/f1Racer/index.html
@@ -17,9 +17,9 @@
             <form id="f1-form">
                 <div class="input-group form-group">
                     <label for="season">Season</label>
-                    <input type="text" class="form-control" id="sea" name="season" placeholder="Enter Season" required>
+                    <input type="number" class="form-control" id="sea" name="season" placeholder="Enter Season" maxlength="4" required>
                     <label for="round">Round</label>
-                    <input type="text" class="form-control" id="rou" name="round" placeholder="Enter Round" required>                   
+                    <input type="number" class="form-control" id="rou" name="round" placeholder="Enter Round" maxlength="2" required>                   
                 </div>
                                   
                 <button class="btn btn-primary" type="submit" id="result7">Show 7 Results</button>
